# MyBro

./: .cspell.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: .cspell.json  .markdownlint.json  copilot-instructions.md
.github/golden-prompts/: README.md  SCORECARD.md  code-review-request.scenario.md  fastapi-endpoint.scenario.md  ml-training-function.scenario.md  report-template.md  security-sensitive-request.scenario.md
.github/instructions/: TEMPLATE.instructions.md  auth-security.instructions.md  data-engineering.instructions.md  data-validation.instructions.md  eda.instructions.md  environments.instructions.md  experiment-tracking.instructions.md  fastapi-api.instructions.md  ml-inference.instructions.md  ml-training.instructions.md  mlops-pipelines.instructions.md  notebooks.instructions.md  observability.instructions.md  project-structure.instructions.md  readme-structure.instructions.md
.github/prompts/: add-auth.prompt.md  add-prometheus-metrics.prompt.md  code-review.prompt.md  data-pipeline.prompt.md  docker-k8s.prompt.md  eda-analysis.prompt.md  ml-pipeline-ci.prompt.md  write-tests.prompt.md
.github/scripts/: validate_instructions.py
.github/workflows/: dev-quality.yml  develop-quality.yml  docs-quality.yml  main-quality.yml  quality.yml
scripts/: bootstrap-copilot.sh  check-links.sh  validate-instruction-files.py  validate_instructions.py
